Fix index menu sizing on smaller viewport

--- a/sass/components/menus.scss
+++ b/sass/components/menus.scss
@@ -13,11 +13,11 @@
   }
 
   @include element ('item') {
-    @include media ('<tl') {
-      width: 25%;
+    @include media ('<=ml') {
+      width: 50%;
     }
 
-    @include media ('<tp') {
+    @include media ('<=mp') {
       width: 100%;
     }
   }
